// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Tooltip Component renders children correctly 1`] = `
<Tooltip
  coordinate={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  offset={25}
  payload={
    Array [
      Object {
        "payload": Object {
          "date": 2010-01-01T12:00:00.000Z,
          "value": 1,
        },
        "value": 1,
      },
    ]
  }
  width="200px"
>
  <div
    className="TooltipWrapper"
    style={
      Object {
        "left": 25,
        "top": 0,
        "width": "200px",
      }
    }
  >
    <div
      className="TooltipDate"
    >
      Jan 1 2010
    </div>
    <div
      className="TooltipContent"
    >
      test
    </div>
  </div>
</Tooltip>
`;

exports[`Signals Tooltip Component renders correctly with default children 1`] = `
<Tooltip
  coordinate={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  offset={25}
  payload={
    Array [
      Object {
        "payload": Object {
          "date": 2010-01-01T12:00:00.000Z,
          "value": 1,
        },
        "value": 1,
      },
    ]
  }
  width="200px"
>
  <div
    className="TooltipWrapper"
    style={
      Object {
        "left": 25,
        "top": 0,
        "width": "200px",
      }
    }
  >
    <div
      className="TooltipDate"
    >
      Jan 1 2010
    </div>
    <div
      className="TooltipContent"
    >
      1
    </div>
  </div>
</Tooltip>
`;

exports[`Signals Tooltip Component renders correctly without date 1`] = `
<Tooltip
  coordinate={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  offset={25}
  payload={
    Array [
      Object {
        "payload": Object {
          "value": 1,
        },
      },
    ]
  }
  width="200px"
>
  <div
    className="TooltipWrapper"
    style={
      Object {
        "left": 25,
        "top": 0,
        "width": "200px",
      }
    }
  >
    <div
      className="TooltipContent"
    />
  </div>
</Tooltip>
`;

exports[`Signals Tooltip Component renders with a custom width correctly 1`] = `
<Tooltip
  coordinate={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  offset={25}
  payload={
    Array [
      Object {
        "payload": Object {
          "date": 2010-01-01T12:00:00.000Z,
          "value": 1,
        },
        "value": 1,
      },
    ]
  }
  width="1200px"
>
  <div
    className="TooltipWrapper"
    style={
      Object {
        "left": 25,
        "top": 0,
        "width": "1200px",
      }
    }
  >
    <div
      className="TooltipDate"
    >
      Jan 1 2010
    </div>
    <div
      className="TooltipContent"
    >
      1
    </div>
  </div>
</Tooltip>
`;
